--- a/IITU_voenka/appsettings.json
+++ b/IITU_voenka/appsettings.json
@@ -1,10 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "Project": {
+    "ConnectionString":  "Data Source=(local)\\SQLSERVER; Database=IITU_voenka; Persist Security Info=false; User ID='sa'; Password = 'sa'; MultipleActiveResultSets=True; Trusted_connection=false;",
+    "CompanyName": "Военная кафедра МУИТ",
+    "CompanyPhone": "+7 (777) 777-77-77",
+    "CompanyPhoneShort": "365-48-48",
+    "CompanyEmail": "iitu@mail.ru"
+  }
 }
