--- a/IITU_voenka/appsettings.json
+++ b/IITU_voenka/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Project": {
     "ConnectionString":  "Data Source=(local)\\SQLSERVER; Database=IITU_voenka; Persist Security Info=false; User ID='sa'; Password = 'sa'; MultipleActiveResultSets=True; Trusted_connection=false;",
-    "CompanyName": "Военная кафедра МУИТ",
+    "CompanyName": "Р’РѕРµРЅРЅР°СЏ РєР°С„РµРґСЂР° РњРЈРРў",
     "CompanyPhone": "+7 (777) 777-77-77",
     "CompanyPhoneShort": "365-48-48",
-    "CompanyEmail": "iitu@mail.ru"
+    "CompanyEmail": "iitu_military@mail.ru"
   }
 }
