--- a/IITU_voenka/appsettings.json
+++ b/IITU_voenka/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Project": {
-    "ConnectionString":  "Data Source=(local)\\SQLSERVER; Database=IITU_voenka; Persist Security Info=false; User ID='sa'; Password = 'sa'; MultipleActiveResultSets=True; Trusted_connection=false;",
+    "ConnectionString": "server=127.0.0.1;uid=root;pwd=root;database=.netasp",
     "CompanyName": "Военная кафедра МУИТ",
     "CompanyPhone": "+7 (777) 777-77-77",
-    "CompanyPhoneShort": "365-48-48",
+    "CompanyPhoneShort": "365-65-65",
     "CompanyEmail": "iitu_military@mail.ru"
   }
 }
