--- a/IITU_voenka/appsettings.json
+++ b/IITU_voenka/appsettings.json
@@ -1,9 +1,12 @@
 {
   "Project": {
-    "ConnectionString": "server=127.0.0.1;uid=root;pwd=root;database=.netasp",
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB; Database=IITU_voenka; Trusted_Connection=True; MultipleActiveResultSets=true",
     "CompanyName": "Военная кафедра МУИТ",
     "CompanyPhone": "+7 (777) 777-77-77",
     "CompanyPhoneShort": "365-65-65",
     "CompanyEmail": "iitu_military@mail.ru"
   }
 }
+
+
+
